Metadata editor: reimplement entry handling

This commit implements entry handling based entirely on a few compile
time macros and Qt's newer signal/slot syntax.

This allows me to add support for flash metadata, which was
broken since at least 67b39577b6dc9e5f2e5e2885b2188cbd393c55f6.

While at it, add a default icon to the Dublin Core pane; the old one in
the xmlgui file was missing since forever.

BUG: 410341

CCMAIL: kimageshop@kde.org
(cherry picked from commit db407cd7993794ebb125ae63b720e11325f7365c)